// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurvivalChip — Dynamic Type accessibility guarantees ACTIVE chip rendered tree stays stable 1`] = `
<View
  accessibilityLabel="활동 중"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
    }
  }
  testID="survival-chip-ACTIVE"
>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#6B9A6E",
        },
      ]
    }
    testID="survival-chip-ACTIVE-dot"
  />
  <View
    accessibilityLabel="icon:check"
    testID="survival-chip-ACTIVE-icon"
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#4A4D55",
          "fontFamily": "WantedSans",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        undefined,
      ]
    }
    testID="survival-chip-ACTIVE-label"
  >
    활동 중
  </Text>
</View>
`;

exports[`SurvivalChip — Dynamic Type accessibility guarantees RED chip rendered tree stays stable 1`] = `
<View
  accessibilityLabel="빨간 카드"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 6,
    }
  }
  testID="survival-chip-RED"
>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "height": 8,
          "width": 8,
        },
        {
          "backgroundColor": "#7C4640",
        },
      ]
    }
    testID="survival-chip-RED-dot"
  />
  <View
    accessibilityLabel="icon:pause-circle-outline"
    testID="survival-chip-RED-icon"
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "color": "#4A4D55",
          "fontFamily": "WantedSans",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        },
        undefined,
      ]
    }
    testID="survival-chip-RED-label"
  >
    빨간 카드
  </Text>
</View>
`;
